Fix Animation for Horizontal Scroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -183,6 +183,12 @@ body {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 
 /* Media Querries */
 
